add: new Build System

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,34 @@
     <link rel="stylesheet" href="./style.css">
 
     <style>
+
         .text-shadow {
             text-shadow: 2px 2px 3px rgb(95, 0, 0); /* Adjust values as needed */
         }
+
+
+        /* Add styles for the shadow */
+        .image-link {
+            position: absolute;
+            display: inline-block; /* Ensure the link behaves like a block element */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Define the shadow */
+        }
+
     </style>
 </head>
 <body>
     <h1 style="position:absolute; top: 0px; left: 0; color: rgb(255, 255, 255); margin: 1em; font-family: Georgia, serif;" class="text-shadow">MAX CALIXTO</h1>
     <h1 style="position:absolute; top: 60px; left: 18px; color:white; margin: 1em; font-family: Georgia, serif; font-size: smaller;" class="text-shadow"> Applied Math Student + SET Research Assistant @ UCSC </h1>
+
+
+    <a class="image-link" href="https://github.com" style="bottom: 20px; left: 18px;">
+        <img class="social-icon" src="./icons/github.png" alt="MCVLIX Github">
+    </a>
+
+
     <canvas class="webgl"></canvas>
+    <script type="module" src="./script.js"></script>
 
     
-
-    <script type="module" src="./script.js"></script>
 </body>
 </html>
