--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>MCVLIX Homepage</title>
 
     <!-- Import stylesheet -->
-    <link rel="stylesheet" href="./style.css">
+    <!--link rel="stylesheet" href="./style.css" -->
 
     <style>
 
