--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>MCVLIX Homepage</title>
 
     <!-- Import stylesheet -->
-    <link rel="stylesheet" href="./style.css">
+    <!--link rel="stylesheet" href="./style.css" -->
 
     <style>
 
@@ -33,7 +33,7 @@
 
 
     <a class="image-link" href="https://github.com" style="bottom: 20px; left: 18px;">
-        <img class="social-icon" src="./docs/icons/github.png" alt="MCVLIX Github">
+        <img class="social-icon" src="./icons/github.png" alt="MCVLIX Github">
     </a>
 
 
