mode index to (root)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MCVLIX Homepage</title>
 
     <!-- Import stylesheet -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <style>
 
@@ -33,12 +33,12 @@
 
 
     <a class="image-link" href="https://github.com" style="bottom: 20px; left: 18px;">
-        <img class="social-icon" src="./icons/github.png" alt="MCVLIX Github">
+        <img class="social-icon" src="./docs/icons/github.png" alt="MCVLIX Github">
     </a>
 
 
     <canvas class="webgl"></canvas>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="/src/script.js"></script>
 
     
 </body>
