--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
     <canvas class="webgl"></canvas>
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="./src/script.js" type="application/javascript"></script>
 
     
 </body>
