--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     </script>
 
     <canvas class="webgl"></canvas>
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="./script.js"></script>
 
 </body>
 </html>
