updated location of script.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>MCVLIX Homepage</title>
 
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -61,7 +61,6 @@
     </div>
 
     <canvas class="webgl"></canvas>
-    
     
 
 </body>
