edited links, still trying to find a working deployment

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <h2 class="header-subtitle">SET Research Assistant + Applied Math @ UC Santa Cruz</h2>
 
         <!-- Image links -->
-        <a class="image-link" href="https://github.com" style="left: 320px;">
+        <a class="image-link" href="https://linkedin.com/in/mcvlix" style="left: 320px;">
             <img class="social-icon" src="docs/assets/linkedin-1867b072.svg" alt="GitHub">
         </a>
         <a class="image-link" href="https://discord.gg/yzxh5RyfS2" style="left: 360px;">
             <img class="social-icon" src="docs/assets/discord-fe9442a0.svg" alt="Discord">
         </a>
-        <a class="image-link" href="https://linkedin.com/in/mcvlix" style="left: 400px;">
+        <a class="image-link" href="https://github.com/mcvlix" style="left: 400px;">
             <img class="social-icon" src="docs/assets/github-1529d586.svg" alt="GitHub">
         </a>
 
