--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <title>Maxwell - Portfolio</title>
 
+    <script type="importmap">
+    {
+        "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/"
+        }
+    }
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
     <script type="module" src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
